# Proyecto-JTC

./: CMakeLists.txt  Escenario.cpp  Escenario.h  Jugador.cpp  Jugador.h  ObsArbol.cpp  ObsArbol.h  ObsCarro.cpp  ObsCarro.h  Obstaculo.cpp  Obstaculo.h  Poder.cpp  Poder.h  PoderCorazon.cpp  PoderCorazon.h  PoderDisTri.cpp  PoderDisTri.h  PoderInvenci.cpp  PoderInvenci.h  Proyectiles.cpp  Proyectiles.h  Tanque.cpp  Tanque.h  main.cpp
